config/prow/k8s/app/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: prow
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      nodeSelector:
        agentpool: prow
      containers:
      - name: minio
        image: minio/minio:RELEASE.2022-10-24T18-35-07Z
        args:
        - gateway
        - azure
        - --console-address=0.0.0.0:$MINIO_CONSOLE_PORT
        ports:
        - containerPort: 9000
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          periodSeconds: 20
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: prow
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9000
    protocol: TCP
  selector:
    app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: prow
spec:
  type: NodePort
  ports:
  - port: $MINIO_CONSOLE_PORT
    targetPort: $MINIO_CONSOLE_PORT
    protocol: TCP
  selector:
    app: minio
