config/prow/k8s/app/svc-envoy.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: $AZURE_RG
    service.beta.kubernetes.io/azure-pip-name: $PUBLIC_IP_NAME
  name: envoy
  namespace: projectcontour
spec:
  externalTrafficPolicy: Local
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8080
  - port: 443
    name: https
    protocol: TCP
    targetPort: 8443
  selector:
    app: envoy
  type: LoadBalancer
  loadBalancerIP: $PUBLIC_IP_ADDRESS
