config/prow/k8s/app/prow-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: prow-httpproxy
  namespace: prow
spec:
  virtualhost:
    fqdn: $PROW_HOST
  routes:
  - conditions:
    - prefix: /
      headers:
      - name: X-From-FrontDoor
        exact: $FRONTDOOR_SECRET
    services:
    - name: deck
      port: 80
  - conditions:
    - prefix: /hook
      headers:
      - name: X-From-FrontDoor
        exact: $FRONTDOOR_SECRET
    services:
    - name: hook
      port: 8888
